# sale-agent

./: .env.example  README.md  pyproject.toml  setup-ec2-public-dns.sh  test_webhook.py
app/: chatbot.py  main.py
config/: settings.py
test/: test_server_webhook.py  test_webhook_message.py
